--- a/data/index.html
+++ b/data/index.html
@@ -91,7 +91,10 @@
   color:#FFFF00;
 }
 .icon-unlock:before {content: "\f09c";}
-.icon-reorder:before {content: "\f0c9";}
+.icon-reorder:before {
+	content: "\f0c9";
+	font-size: 1.17em;
+}
 .icon-spinner_2:before {content: "\f110";}
 .icon-charger:before {content: "\f1e6";}
 .icon-battery-100:before {content: "\f240";}
@@ -1865,7 +1868,53 @@
 }
 .text-align-left {
 	text-align:left;
-}		
+}	
+
+.dropbtn {
+	position: absolute;
+    background-color: #4a4a4a;;
+    padding:5px 5px 0px 5px;
+	top: -4px;
+	right:-20px;
+	color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: -18px;
+	top: 24px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 8px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+	
     </style>
 </head>
 <body>
@@ -1981,6 +2030,12 @@
             <div id="temp_channel" class="pure-g channel_index"><!-- Dynamically channel insert --></div>
 			<div id="chart_container" class="pure-u-1-1 pure-u-lg-1-1">
 				<div class="1-box chart_container">						
+					<div class="dropdown" style="float:right;">
+					  <button class="dropbtn"><span class="icon-reorder"></span></button>
+					  <div class="dropdown-content">
+						<a href="#">Link 1</a>
+					  </div>
+					</div>
 					<canvas id="nanoChart"></canvas>
 				</div>
 			</div>			
@@ -2516,9 +2571,6 @@
 							  <label class="control-label" for="input">Chat ID / User Key</label><i class="bar"></i>
 							</div>
 							<p class="pure-button pure-button-primary" onclick="sendPushNotification();">Testnachricht senden</p>
-							<!-- <a class="pure-button" href="" onclick="getChatID();">A Pure Button</a> -->
-							<!-- <p class="pure-button pure-button-primary" onclick="getChatID();">ChatID ermitteln</p> -->
-							<!-- <button class="" onSubmit="return false;">A Primary Button</button>														 -->
 						</form>
 					</div>
 				</div>
@@ -2626,44 +2678,6 @@
 		setInterval("readTemp();", 2000);
 	});
 	
-	//var lang="en"; // current language
-	// translation data
-	var langData = {
-		de: {
-			back: "Zurück",
-			save: "Speichern"
-		},
-		en: {
-			back: "Back",
-			save: "Save"
-		}
-	};
-	 
-	// returns the translation for the given
-	// language key (depending on the current language)
-	function translate(key,lang) {
-		if (langData.hasOwnProperty(lang)) {
-			if (langData[lang].hasOwnProperty(key)) {
-				return langData[lang][key];
-			} else {
-				console.log("Unknown language key: " + key);
-				return "Undefined";
-			}
-		} else {
-			console.log("Unknown language: " + lang);
-			return "Undefined";
-		}
-	};
-	 
-	// translate all multi-lingual DOM elements
-	function translateView(lang) {
-		$(".lang").each(function() {
-			var key = $(this).attr("data-lang");
-	 
-			$(this).text(translate(key,lang));
-		});
-	};
-	
 	function showWLAN(){
 		hideAll();
 		byId('wlan_config').style.display = "inline";
@@ -2765,7 +2779,7 @@
 			})		
 		})
 	}
-	
+	// -----------------------------------------------------------------------------------	
 	function showPushNotification(){
 		hideAll();
 		showLoader('true');
@@ -2779,10 +2793,6 @@
 		})				
 	}
 
-	function getChatID(){
-		getRequest();
-	}
-	
 	function setPushNotification(){
 		showLoader('true');
 		loadJSON('settings', '', '3000', function (response){
@@ -2805,14 +2815,14 @@
 			//alert(data);
 		})	
 	}
-	
+	// -----------------------------------------------------------------------------------		
 	function showSetWLAN(){
 		hideAll();
 		byId('wlan_set').style.display = "inline";
 	}	
 
+	// -----------------------------------------------------------------------------------	
 	function showSetChannel(channel){
-		
 		console.log('Channel:' + channel);
         hideAll();
         showLoader('true');
@@ -2883,7 +2893,7 @@
 			})		
 		})	
 	}
-	
+	// -----------------------------------------------------------------------------------		
 	function clearOption(id){
 		var selectbox = document.getElementById(id);
 		var i;
@@ -2891,7 +2901,7 @@
 			selectbox.remove(i);
 		}
 	}
-	
+	// -----------------------------------------------------------------------------------		
 	function setWLAN(ssid, passwd){
 		showLoader('true');
 		var data='{"ssid":"' + ssid + '","password":"' + passwd + '"}';
@@ -2901,28 +2911,33 @@
 		})
 		
 	}	
-	
+	// -----------------------------------------------------------------------------------		
 	function setThermoName(){
-		showLoader('true');
-		loadJSON('settings', '', '5000', function (response) {
-			jr = JSON.parse(response);
-			byId('thermoname').innerHTML = jr.system.host;
-			translateView(jr.system.language);
-			if(jr.iot.CLon === true){
-				cloud_token = jr.iot.CLtoken;
-			}
-			
-			if(jr.system.getupdate == 'false'){
-				byClass("notification")[0].style.display = "none";
-			}else{
-				byClass("notification")[0].style.display = "inline";
-			}
-			showLoader('false');
-		})
+		showLoader('true');	
+		$.ajax({
+			dataType: 'json',
+			url: "settings",
+			error: function(){
+				setTimeout(function(){setThermoName(); }, 1000); 
+			},
+			success: function(jr){
+				byId('thermoname').innerHTML = jr.system.host;
+				translateView(jr.system.language);
+				if(jr.iot.CLon === true){
+					cloud_token = jr.iot.CLtoken;
+				}			
+				if(jr.system.getupdate == 'false'){
+					byClass("notification")[0].style.display = "none";
+				}else{
+					byClass("notification")[0].style.display = "inline";
+				}
+				showLoader('false');
+			},
+			timeout: 3000 // sets timeout to 3 seconds
+		});
 	}
-	
+	// -----------------------------------------------------------------------------------		
 	var updateActivated = 'false';
-	
 	function checkUpdateActivated(){
 		loadJSON('updatestatus', '', '3000', function (response) {
 			jr = JSON.parse(response);
@@ -2936,9 +2951,8 @@
 			}
 		})	
 	}
-	
+	// -----------------------------------------------------------------------------------		
 	var dcActivated = 'false';
-	
 	function checkDCActivated(){
 		loadJSON('dcstatus', '', '3000', function (response) {
 			jr = JSON.parse(response);
@@ -2950,7 +2964,7 @@
 			}
 		})	
 	}
-	
+	// -----------------------------------------------------------------------------------		
 	function showLoader(show){
 		if (show == 'true') {
 			byId('cover').classList.add("cover_active");
@@ -2960,7 +2974,7 @@
 			byId('spinner').classList.remove("spinner");
 		}
 	}
-	
+	// -----------------------------------------------------------------------------------		
 	function update(){
 		loadJSON('settings', '', '3000', function (response) {
 			jr = JSON.parse(response);
@@ -2973,7 +2987,7 @@
 			}						
 		})	
 	}
-	
+	// -----------------------------------------------------------------------------------		
 	function showSystem(){
 		hideAll();
 		showLoader('true');
@@ -3016,7 +3030,7 @@
 			})		
 		})	
 	}
-	
+	// -----------------------------------------------------------------------------------		
 	function showPitmaster(){		
 		hideAll();
 		showLoader('true');
@@ -3173,30 +3187,25 @@
 				dcActivated = 'true';
 			})	
 		}		
-	}
-	
-	function showChart(){
-		hideAll();
-		byId('chart_config').style.display = "inline";
 	}	
-	
+	// -----------------------------------------------------------------------------------	
 	function showIndex(){
 		hideAll();
 		byId('index').style.display = "inline";
 	}
-	
+	// -----------------------------------------------------------------------------------	
 	function showAbout(){
 		hideAll();
 		byId('about').style.display = "inline";
 	}	
-
+	// -----------------------------------------------------------------------------------
 	function hideAll(){
 		hideIDs = ['index','wlan_config','system_config','system_config','about','wlan_set','thingspeak','push_notification','channel_settings','pitmaster_settings','pitmaster_profile','extended_settings'];
 		for (var i = 0; i < hideIDs.length; i++) {
 			byId(hideIDs[i]).style.display = "none";
 		}
 	}
-	
+	// -----------------------------------------------------------------------------------	
     function loadJSON(url, data, timeout, callback) {
         var xobj = new XMLHttpRequest();
         xobj.overrideMimeType("application/json");
@@ -3415,7 +3424,7 @@
 			})
 		}
 	}
-	
+	// -----------------------------------------------------------------------------------		
 	function networkscan(){
 		loadJSON('networkscan', '', '3000', function (response) {
 			byId('networkrefresh').innerHTML = '<h3><span class="icon-refresh icon-rotate-50" onclick="networkscan();"></span></h3>'
@@ -3494,7 +3503,7 @@
 			})(i);
 		}
 	}
-	
+	// -----------------------------------------------------------------------------------		
 	function validateNumber(number,decimal) {
 		val = number.value.replace(/[^0-9.,]/g,'').replace(/[,]/g, '.');
 		switch(decimal) {
@@ -3516,7 +3525,7 @@
 		if(val.split('.').length>2){val = val.replace(/\.+$/,"");}		
 		number.value = val;
 	}
-	
+	// -----------------------------------------------------------------------------------		
 	function showExtendedSettings(){
 		hideAll();
 		byId('extended_settings').style.display = "inline";
@@ -3534,7 +3543,7 @@
 			showExtendedSettings();
 		}
 	}	
-
+	// -----------------------------------------------------------------------------------	
 	function restart(){
 		txt = 'Nano neu starten?';
 		if (confirm(txt) == true) {
@@ -3548,7 +3557,7 @@
 			loadJSON('v2', '', '60000', function (response) {});
         }
 	}
-	
+	// -----------------------------------------------------------------------------------		
 	// convert UNIX timestamp
 	// -----------------------------------------------------------------------------------	
 	function timeConverter(UNIX_timestamp){
@@ -3568,7 +3577,7 @@
 	  //alert(unix + ' ' + UNIX_timestamp);
 	  return time;
 	}
-
+	// -----------------------------------------------------------------------------------	
 	function loadChartData(token){
 		url = "http://cloud.wlanthermo.de/data2.php?api_token=" + token + "&chartHistory=true&callback=callback";
 		$.ajax({
@@ -3579,12 +3588,6 @@
 		 
 			// Tell jQuery we're expecting JSONP
 			dataType: "jsonp",
-		 
-			// Tell YQL what we want and that we want JSON
-			data: {
-				//q: "select title,abstract,url from search.news where query=\"cat\"",
-				//format: "json"
-			},
 		 
 			// Work with the response
 			success: function( response ) {
@@ -3629,7 +3632,8 @@
 	Chart.defaults.global.scaleFontSize = 16;
 	
 	var myContext = document.getElementById("nanoChart");
-	
+	var progress = document.getElementById('animationProgress');
+
 	var chartOptions = {
 		scales:{
 			xAxes:[{
@@ -3672,7 +3676,7 @@
 					}
 				}
 			]		
-		},
+		},	
 		tooltips: {
             enabled: true,
             callbacks: {
@@ -3726,49 +3730,48 @@
 		loadChartData(token);
 	}	
  
-function addData(timestamp,jr,update){
-	nanoChart.data.labels.push(timestamp);
-	var i;
-	for (i = 0; i < jr.channel.length; i++) {
-		if(typeof jr.channel[i].temp !== "undefined"){
-			nanoChart.data.datasets[i].borderColor = jr.channel[i].color;
-			nanoChart.data.datasets[i].backgroundColor = jr.channel[i].color;
-			nanoChart.data.datasets[i].fill = false;
-			if (jr.channel[i].temp == '999'){
-				nanoChart.data.datasets[i].data.push(null);
+	function addData(timestamp,jr,update){
+		nanoChart.data.labels.push(timestamp);
+		var i;
+		for (i = 0; i < jr.channel.length; i++) {
+			if(typeof jr.channel[i].temp !== "undefined"){
+				nanoChart.data.datasets[i].borderColor = jr.channel[i].color;
+				nanoChart.data.datasets[i].backgroundColor = jr.channel[i].color;
+				nanoChart.data.datasets[i].fill = false;
+				if (jr.channel[i].temp == '999'){
+					nanoChart.data.datasets[i].data.push(null);
+				}else{
+					nanoChart.data.datasets[i].data.push(jr.channel[i].temp.toFixed(1) );
+				}
 			}else{
-				nanoChart.data.datasets[i].data.push(jr.channel[i].temp.toFixed(1) );
+				nanoChart.data.datasets[i].data.push(null);
+			}
+		}
+		nanoChart.data.datasets[i].fill = false;	
+		if(typeof jr.pitmaster[0].typ !== "undefined" && typeof jr.pitmaster[0].set !== "undefined" && typeof jr.pitmaster[0].value !== "undefined"){
+			if(jr.pitmaster[0].typ == 'off'){
+				nanoChart.data.datasets[i].data.push(null);
+				nanoChart.data.datasets[i+1].data.push(null);
+			}else{
+				nanoChart.data.datasets[i].data.push(jr.pitmaster[0].set);
+				nanoChart.data.datasets[i+1].data.push(jr.pitmaster[0].value);
 			}
 		}else{
 			nanoChart.data.datasets[i].data.push(null);
-		}
-	}
-	nanoChart.data.datasets[i].fill = false;	
-    if(typeof jr.pitmaster[0].typ !== "undefined" && typeof jr.pitmaster[0].set !== "undefined" && typeof jr.pitmaster[0].value !== "undefined"){
-		if(jr.pitmaster[0].typ == 'off'){
-			nanoChart.data.datasets[i].data.push(null);
 			nanoChart.data.datasets[i+1].data.push(null);
-		}else{
-			nanoChart.data.datasets[i].data.push(jr.pitmaster[0].set);
-			nanoChart.data.datasets[i+1].data.push(jr.pitmaster[0].value);
 		}
-	}else{
-		nanoChart.data.datasets[i].data.push(null);
-		nanoChart.data.datasets[i+1].data.push(null);
-	}
-	if(update === true){
-		nanoChart.update();	
-	}
+		if(update === true){
+			nanoChart.update();	
+		}
 
-}
-	
+	}
+	// -----------------------------------------------------------------------------------		
 	function setHelpBox(title,v){	
 		byId('helpBoxTitle').innerHTML = title;
 		document.getElementById("helpBoxObject").innerHTML = v;
 		byId('helpBox').style.display= 'block';
 	}
-	readTemp();
-	
+	// -----------------------------------------------------------------------------------	
 	function hexToRGB(hex, alpha) {
 		var r = parseInt(hex.slice(1, 3), 16),
 			g = parseInt(hex.slice(3, 5), 16),
@@ -3780,6 +3783,45 @@ function addData(timestamp,jr,update){
 			return "rgb(" + r + ", " + g + ", " + b + ")";
 		}
 	}
+	// -----------------------------------------------------------------------------------	
+	//var lang="en"; // current language
+	// translation data
+	var langData = {
+		de: {
+			back: "Zurück",
+			save: "Speichern"
+		},
+		en: {
+			back: "Back",
+			save: "Save"
+		}
+	};
+	 
+	// returns the translation for the given
+	// language key (depending on the current language)
+	function translate(key,lang) {
+		if (langData.hasOwnProperty(lang)) {
+			if (langData[lang].hasOwnProperty(key)) {
+				return langData[lang][key];
+			} else {
+				console.log("Unknown language key: " + key);
+				return "Undefined";
+			}
+		} else {
+			console.log("Unknown language: " + lang);
+			return "Undefined";
+		}
+	};
+	 
+	// translate all multi-lingual DOM elements
+	function translateView(lang) {
+		$(".lang").each(function() {
+			var key = $(this).attr("data-lang");
+	 
+			$(this).text(translate(key,lang));
+		});
+	};
+	readTemp();	
 </script>
 
 </body>
