--- a/data/index.html
+++ b/data/index.html
@@ -718,7 +718,6 @@
 			}
 		}
 		}
-		
 		.pure-menu-fixed {
 			position:fixed;
 			left:0;
@@ -1914,6 +1913,10 @@
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
 }
+
+#chart_container_hide{
+	display:none;
+}
 	
     </style>
 </head>
@@ -2028,7 +2031,7 @@
  		<!-- ################################################### -->
         <div id="index" class="content" class="hidden" style="display:none">
             <div id="temp_channel" class="pure-g channel_index"><!-- Dynamically channel insert --></div>
-			<div id="chart_container" class="pure-u-1-1 pure-u-lg-1-1">
+			<div id="chart_container_hide" class="pure-u-1-1 pure-u-lg-1-1">
 				<div class="1-box chart_container">						
 					<div class="dropdown" style="float:right;">
 					  <button class="dropbtn"><span class="icon-reorder"></span></button>
@@ -2745,10 +2748,15 @@
 	function newToken(){
 		showLoader('true');
 		loadJSON('newtoken', '', '3000', function (response){
-		byId('CLtoken').innerHTML = "https://cloud.wlanthermo.de/index.html?api_token=" + response;			
-		byId("CLtoken").setAttribute("href", "https://cloud.wlanthermo.de/index.html?api_token=" + response);
+			byId('CLtoken').innerHTML = "https://cloud.wlanthermo.de/index.html?api_token=" + response;	
+			cloud_token = response;
+			nanoChart.destroy();
+			nanoChart = false;
+			chart_init = false;
+			pit_count = 15;
+			byId("CLtoken").setAttribute("href", "https://cloud.wlanthermo.de/index.html?api_token=" + response);
 			showLoader('false');
-		})
+			})
 	}
 	
 	function setThingspeak(){
@@ -3054,40 +3062,33 @@
 	function changePitmasterTyp(){		
 		switch(byId('pitmaster_typ').value) {
 			case 'off':
-				byId('pitmaster_value_show').style.display = "none";
-				byId('pitmaster_channel_show').style.display = "none";
-				byId('pitmaster_set_show').style.display = "none";
-				byId('pitmaster_profile_show').style.display = "none";
-				byId('pid_settings_show').style.display = "none";
+				$("#pitmaster_value_show").hide();
+				$("#pitmaster_channel_show").hide();
+				$("#pitmaster_set_show").hide();
+				$("#pitmaster_profile_show").hide();
+				$("#pid_settings_show").hide();
 				break;
-			case 'manual':
-				byId('pitmaster_value_show').style.display = "inline";	
-				byId('pitmaster_channel_show').style.display = "none";
-				byId('pitmaster_set_show').style.display = "none";
-				byId('pitmaster_profile_show').style.display = "inline";
-				byId('pid_settings_show').style.display = "none";
-
+			case 'manual':	
+				$("#pitmaster_value_show").show();
+				$("#pitmaster_channel_show").hide();
+				$("#pitmaster_set_show").hide();
+				$("#pitmaster_profile_show").show();
+				$("#pid_settings_show").hide();
 				break;
 			case 'autotune':
-				byId('pitmaster_profile_show').style.display = "inline";
-				byId('pitmaster_value_show').style.display = "none";
-				byId('pitmaster_channel_show').style.display = "inline";
-				byId('pitmaster_set_show').style.display = "inline";
-				byId('pid_settings_show').style.display = "none";				
+				$("#pitmaster_profile_show").show();
+				$("#pitmaster_value_show").hide();
+				$("#pitmaster_channel_show").show();
+				$("#pitmaster_set_show").show();
+				$("#pid_settings_show").hide();				
 				break;
 			case 'auto':
-				byId('pitmaster_profile_show').style.display = "inline";
-				byId('pitmaster_value_show').style.display = "none";
-				byId('pitmaster_channel_show').style.display = "inline";
-				byId('pitmaster_set_show').style.display = "inline";			
-				byId('pid_settings_show').style.display = "inline";
+				$("#pitmaster_profile_show").show();
+				$("#pitmaster_value_show").hide();
+				$("#pitmaster_channel_show").show();
+				$("#pitmaster_set_show").show();
+				$("#pid_settings_show").show();	
 				break;
-			default:
-				byId('pitmaster_profile_show').style.display = "inline";
-				byId('pitmaster_value_show').style.display = "inline";
-				byId('pitmaster_channel_show').style.display = "inline";
-				byId('pitmaster_set_show').style.display = "inline";
-				byId('pid_settings_show').style.display = "inline";
 		} 		
 	}
 	function setPitmaster(){
@@ -3286,26 +3287,18 @@
 	}
 
 	function getWifiSecureIcon(data){
-		var lock = getIcon('lock');
-		var unlock = getIcon('unlock');
 		switch(data) {
 			case 2: //ENC_TYPE_TKIP - WPA / PSK
-				return lock;
-				break;
 			case 4: //ENC_TYPE_CCMP - WPA2 / PSK
-				return lock;
-				break;
 			case 5: //ENC_TYPE_WEP - WEP
-				return lock;
+			case 8:	//ENC_TYPE_AUTO - WPA / WPA2 / PSK
+				return getIcon('lock');
 				break;
 			case 7: //ENC_TYPE_NONE - open network
-				return unlock;
+				return getIcon('unlock');
 			break;
-			case 8:	//ENC_TYPE_AUTO - WPA / WPA2 / PSK
-				return lock;
-				break;	
 			default:
-				return lock;
+				return getIcon('lock');
 		} 
 	}
 
@@ -3504,24 +3497,8 @@
 		}
 	}
 	// -----------------------------------------------------------------------------------		
-	function validateNumber(number,decimal) {
-		val = number.value.replace(/[^0-9.,]/g,'').replace(/[,]/g, '.');
-		switch(decimal) {
-			case '1': 
-				if(val){val = val.toString().match(/^-?\d+(?:\.\d{0,1})?/)[0];}
-				break;
-			case '2': 
-				if(val){val = val.toString().match(/^-?\d+(?:\.\d{0,2})?/)[0];}
-				break;
-			case '3':
-				if(val){val = val.toString().match(/^-?\d+(?:\.\d{0,3})?/)[0];}
-				break;
-			case '4':
-				if(val){val = val.toString().match(/^-?\d+(?:\.\d{0,4})?/)[0];}
-				break;
-			default:
-				if(val){val = val.toString().match(/^-?\d+(?:\.\d{0,1})?/)[0];}
-		} 
+	function validateNumber(number,decimal) {		
+		val = number.value.replace(/[^0-9.,]/g,'').replace(/[,]/g, '.').toString().match(new RegExp("^-?\\d+(?:\\.\\d{0," + decimal + "})?"))[0];
 		if(val.split('.').length>2){val = val.replace(/\.+$/,"");}		
 		number.value = val;
 	}
@@ -3573,8 +3550,6 @@
 	  var sec = a.getSeconds();
 	  sec = ("0" + sec).slice(-2);
 	  var time = date + ' ' + month + ' ' + year + ' ' + hour + ':' + min + ':' + sec ;
-	  //var unix = Math.round(+new Date()/1000);
-	  //alert(unix + ' ' + UNIX_timestamp);
 	  return time;
 	}
 	// -----------------------------------------------------------------------------------	
@@ -3582,18 +3557,11 @@
 		url = "http://cloud.wlanthermo.de/data2.php?api_token=" + token + "&chartHistory=true&callback=callback";
 		$.ajax({
 			url: url,
-		 
-			// The name of the callback parameter, as specified by the YQL service
 			jsonp: "callback",
-		 
-			// Tell jQuery we're expecting JSONP
 			dataType: "jsonp",
-		 
-			// Work with the response
 			success: function( response ) {
 				console.log(response);
 				jr = JSON.parse(response);
-				
 				for (i = 0; i < jr.length -1; i++) {
 					try {
 						if(chart_ts != jr[i].system.time){
@@ -3609,12 +3577,10 @@
 			}
 		});	
 	}   
-
 	// Initialized Chart
 	// -----------------------------------------------------------------------------------
 	var chart_init = false;
 	var nanoChart = false;
-	var datasetValue = [];
 	var cloud_token = false;
 	var ch_name = new Array('#1', '#2', '#3', '#4', '#5', '#6', '#7', '#8','#9', '#10', '#11', '#12','#13', '#14', '#15', 'PIT set', 'PIT val');
 	var unit = '';
@@ -3691,6 +3657,7 @@
         }};
 			
 	function addChartDataset(channels,token){
+		var datasetValue = [];
 		for (var j = 0; j < channels; j++) {    
 			datasetValue[j] = {
 				label: '#' + (j+1),
@@ -3726,7 +3693,9 @@
 			options: chartOptions
 		};		
 		if(debug === true){console.log('Dataset RAW Data:' + myChartConfig);}
-		nanoChart = new Chart(myContext, myChartConfig);   
+		nanoChart = new Chart(myContext, myChartConfig); 
+		$('#chart_container_hide').attr('id', 'chart_container');
+		nanoChart.update();	
 		loadChartData(token);
 	}	
  
@@ -3776,7 +3745,6 @@
 		var r = parseInt(hex.slice(1, 3), 16),
 			g = parseInt(hex.slice(3, 5), 16),
 			b = parseInt(hex.slice(5, 7), 16);
-
 		if (alpha) {
 			return "rgba(" + r + ", " + g + ", " + b + ", " + alpha + ")";
 		} else {
